@@ -2,11 +2,26 @@
 <!--http://www.benext.eu/static/manual/heatingcontrol.pdf-->
 <Product xmlns='http://code.google.com/p/open-zwave/'>
 
+  <CommandClass id="64">
+    <Value type="list" genre="user" instance="1" index="0" label="Mode" units="" read_only="false" write_only="false" min="0" max="0" value="0">
+      <Item label="Heating" value="1"/>
+      <Item label="Energy Save heating" value="11"/>
+    </Value>
+    <SupportedModes>
+      <Mode index="0" label="Heating"/>
+      <Mode index="1" label="Energy Save heating"/>
+    </SupportedModes>
+  </CommandClass>
+
   <!-- Configuration -->
   <CommandClass id="112">
-
-    <Value type="byte" genre="config" instance="1" index="1" label="Set to Default" value="-1">
-      <Help>Set all configuration values to default values (factory settings).</Help>
+    <Value type="byte" genre="config" instance="1" index="1" label="Reset to Default" size="1" value="0">
+      <Help>0xFF: Set all configuration values to default values (factory settings).
+        CONFIGURATION_REPORT
+        0x55: Configuration settings of the device are altered.
+        0xAA: Configuration of the device is untouched.
+        Note that this value will not change to 0x55 upon modifying the wake up interval and that re-setting the value to 0xAA will always reset the wake up interval.
+      </Help>
     </Value>
 
     <Value type="byte" genre="config" instance="1" index="2" label="Data request interval" value="20" size="1">
@@ -23,21 +38,27 @@
 
     <Value type="list" genre="config" instance="1" index="5" label="Unsolicited CRC" size="1" value="1">
       <Help>TConfigure if the unsolicited reports are send with the CRC-16 encapsulation. Not that the receiving node should support this encapsulation to parse the Z-Wave frame!</Help>
-      <Item label="0x00 (disabled)" value="0"/>
-      <Item label="0x01 to 0xFF: enabled" value="1"/>
+      <Item label="Disabled" value="0"/>
+      <Item label="Enabled" value="255"/>
     </Value>
 
     <Value type="list" genre="config" instance="1" index="6" label="Type of 'special' thermostat" size="1" value="0">
       <Help>Type of 'special' thermostat: NOTE: when remeha Celcia 20 support is set then any other thermostat can not be set (!) NOTE2: when Remeha Celcia 20 gives 'Fout 203' send cfg value again</Help>
-    <Item label="0x00: No special" value="0"/>
-    <Item label="0x01: Remeha Celcia 20" value="1"/>
-    <Item label="0x02: Honeywell (rounded temperatures)" value="2"/>
+    <Item label="No special" value="0"/>
+    <Item label="Remeha Celcia 20" value="1"/>
+    <Item label="Honeywell (rounded temperatures)" value="2"/>
+    </Value>
+
+    <Value type="list" genre="config" instance="1" index="7" label="Status auto report" size="1" value="0">
+      <Help>Status auto report boiler/thermostat report</Help>
+      <Item label="Disabled" value="0"/>
+      <Item label="Enabled" value="255"/>
     </Value>
     
-     <Value type="list" genre="config" instance="1" index="9" label="Enable/Disable thermostat schedule" size="1" value="0">
-      <Help>Enable/Disable thermostat schedule inside the heatingcontroller.</Help>
-      <Item label="0x00: Disable thermostat schedule" value="0"/>
-      <Item label="0x01 - OFF: Enable thermostat schedule" value="1"/>
+     <Value type="list" genre="config" instance="1" index="9" label="Thermostat schedule" size="1" value="0">
+      <Help>Enable/Disable thermostat schedule inside the heating controller.</Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="255"/>
     </Value>
 
   </CommandClass>
@@ -48,7 +69,7 @@
   <!-- Association Groups -->
   <CommandClass id="133">
     <Associations num_groups="1">
-      <Group index="1" max_associations="5" label="Group 1" />
+      <Group index="1" max_associations="5" label="Lifeline" />
     </Associations>
   </CommandClass>
 
