@@ -135,7 +135,8 @@ Version 1.5
  - Add Kaipule IM20 Door/Window Sensor (Nechry)
  - Add Add Yale door lock missing parameters (Nechry)
  - Add Yale Keyless Connected Smart Lock (Nechry) 
- - Add Yale variante for Keyless Connected Smart Lock (Nechry) 
+ - Add Yale variante for Keyless Connected Smart Lock (Nechry)
+ - Add add Heating Control variante (Nechry) 
 
 Version 1.4
  - Released 10th Jan, 2016
